test/JDBC/expected/BABEL-2280.out
-- test normal sp_executesql functionality
exec sp_executesql N'SELECT 1'
go
~~START~~
int
1
~~END~~


exec sp_executesql N'SELECT @var1', N'@var1 varchar(20)', @var1=2
go
~~START~~
varchar
2
~~END~~


exec sp_executesql N'SELECT @var1, @var2', N'@var1 int, @var2 varchar(20)', @var2='Hello, World!', @var1=123
go
~~START~~
int#!#varchar
123#!#Hello, World!
~~END~~


exec sp_executesql N'SELECT @var1, @var2', N'@var1 int, @var2 varchar(20)', 123, 'Hello, World!'
go
~~START~~
int#!#varchar
123#!#Hello, World!
~~END~~


-- these should all return no output
exec sp_executesql N''
go
exec sp_executesql N'', N''
go
exec sp_executesql N'', N'', N''
go
exec sp_executesql N'', N'', @var1=1
go

-- this should return 1
exec sp_executesql N'SELECT 1', N''
go
~~START~~
int
1
~~END~~


-- these should all return errors
-- error code 102
exec sp_executesql N'', N'@var1'
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near ")")~~


-- error code 8178
exec sp_executesql N'', N'@var1 varchar(20)'
go
~~ERROR (Code: 33557097)~~

~~ERROR (Message: param definition mismatches with inputs)~~

